--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -31,6 +31,10 @@ html {
     rgb(var(--background-start-rgb));
 } */
 
+.sectionHeader {
+  @apply text-4xl font-bold text-black mb-4
+}
+
 .sectionPadding {
-  @apply pt-60
+  @apply pt-28
 }
