--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -16,6 +16,10 @@
   }
 } */
 
+* {
+  @apply box-border
+}
+
 html {
   --scroll-behavior: smooth !important;
   scroll-behavior: smooth !important;
