--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -56,7 +56,7 @@ html {
 }
 
 .callToAction {
-  @apply w-full bg-accent-1 text-xl font-extrabold text-white p-4 rounded-lg hover:brightness-125
+  @apply w-full max-h-16 flex-auto bg-accent-1 text-xl font-extrabold text-white p-4 rounded-lg hover:brightness-105 flex flex-row justify-center items-center gap-2 capitalize
 }
 
 .inputField {
