--- a/app/globals.css
+++ b/app/globals.css
@@ -2,18 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.navbar__white {
-  @apply text-black;
-}
-
-.navbar__black {
-  @apply bg-white;
-}
-
-.navbar__black a {
-  @apply hover:text-accent-1;
-}
-
 @layer base {
   * {
     @apply box-border scroll-pt-20;
@@ -23,9 +11,52 @@
     --scroll-behavior: smooth !important;
     scroll-behavior: smooth !important;
   }
+
+  h1 {
+    font-weight: 700;
+    font-size: clamp(40px, 8vw + 1rem, 100px);
+    text-transform: capitalize;
+  }
+  h2 {
+    font-weight: 700;
+    font-size: clamp(32px, 4vw + 1rem, 64px);
+    text-transform: capitalize;
+  }
+  h3 {
+    font-weight: 700;
+    font-size: clamp(28px, 3vw + 1rem, 40px);
+    text-transform: capitalize;
+  }
+  h4 {
+    font-weight: 700;
+    font-size: clamp(20px, 3vw + 1rem, 32px);
+    text-transform: capitalize;
+  }
+  h5 {
+    font-weight: 700;
+    font-size: clamp(20px, 3vw + 1rem, 24px);
+    text-transform: capitalize;
+  }
+  h6 {
+    font-weight: 700;
+    font-size: clamp(14px, 3vw + 1rem, 16px);
+    text-transform: capitalize;
+  }
 }
 
 @layer utilities {
+  .navbar__white {
+    @apply text-black;
+  }
+
+  .navbar__black {
+    @apply bg-white;
+  }
+
+  .navbar__black a {
+    @apply hover:text-accent-1;
+  }
+
   .spacing-vertical {
     padding-block: clamp(1rem, 1rem + 10vw, 6.25rem);
   }
@@ -40,34 +71,5 @@
   }
 }
 
-/* .sectionHeader {
-  @apply mb-4 text-4xl font-bold text-black;
+@layer components {
 }
-
-.sectionPadding {
-  @apply px-6 py-28;
-}
-
-.callToAction {
-  @apply flex max-h-16 w-full flex-auto flex-row items-center justify-center gap-2 rounded-lg bg-accent-1 p-4 text-xl font-extrabold capitalize text-white hover:brightness-105;
-}
-
-.inputField {
-  @apply rounded-md border border-solid border-slate-400 p-4;
-}
-
-.textArea {
-  @apply h-[190px] resize-none;
-}
-
-.tableTitle {
-  @apply flex flex-1 flex-row items-center justify-center gap-2 rounded-lg bg-slate-500 px-4 py-3 text-lg font-bold capitalize text-white;
-}
-
-.tableContainer {
-  @apply flex w-full flex-row gap-2 lg:gap-4;
-}
-
-.tableContent {
-  @apply flex flex-1 flex-row items-center gap-2 rounded-lg border border-slate-300 px-4 py-2 text-xs font-medium capitalize;
-} */
